--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -4,14 +4,14 @@ jobs:
   setup:
     runs-on: ubuntu-latest
     steps:
-      - run: ls /
+      - run: touch wrxue
   build:
     needs: setup
     runs-on: ubuntu-latest
     steps:
-      - run: ls /
+      - run: touch weirenxue
   test:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - run: ls /
+      - run: ls
